--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     width: 700px; 
     height: 450px; 
     transition: box-shadow 0.3s ease, transform 0.3s ease;
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
   }
   
   #main-container:hover {
@@ -78,6 +79,7 @@ body {
     border-radius: 20px;
     box-sizing: border-box; 
     overflow: hidden; 
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5) !important;
   }
   
   .square {
@@ -98,7 +100,7 @@ body {
   }
   
   #sizeValue {
-    font-size: 22px;
+    font-size: 20px;
     color: black;
   }
   
