--- a/style.css
+++ b/style.css
@@ -11,13 +11,15 @@ body {
 
 #main-container {
   background-color: rgb(241, 6, 6);
+  background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
+  background-size: cover;
   padding: 30px;
   border-radius: 45px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 700px; 
-  height: 450px; 
+  width: 700px;
+  height: 450px;
   transition: box-shadow 0.3s ease, transform 0.3s ease;
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
