--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
 }
 
-#main-container {
+.main-container {
   background-color: rgb(241, 6, 6);
   background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
   background-size: cover;
@@ -24,11 +24,11 @@ body {
   box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-#main-container.shake {
+.main-container.shake {
   animation: shake 0.5s ease forwards;
 }
 
-#main-container:hover {
+.main-container:hover {
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6); 
   transform: translateY(-10px) scale(1.05); 
 }
@@ -51,11 +51,11 @@ body {
   }
 }
 
-#reset-container {
+.reset-container {
   margin-bottom: 25px;
 }
 
-#reset {
+.reset {
   padding: 10px 20px;
   font-size: 18px;
   border-radius: 15px;
@@ -66,26 +66,26 @@ body {
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-#reset:hover {
+.reset:hover {
   background-color: orange;
   transform: scale(1.1);
 }
 
-#middle {
+.middle {
   display: flex;
   gap: 30px;
   margin-bottom: 20px;
   align-items: center;
 }
 
-#sidebar {
+.sidebar {
   display: flex;
   flex-direction: column;
   gap: 15px;
   align-items: center;
 }
 
-#erase {
+.erase {
   padding: 10px;
   font-size: 16px;
   border-radius: 15px;
@@ -96,24 +96,24 @@ body {
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-#erase:hover {
+.erase:hover {
   background-color: orange;
   transform: scale(1.1);
 }
 
-#colorpicker {
+.colorpicker {
   padding: 10px;
   font-size: 16px;
   border-radius: 15px;
 }
 
-#grid {
+.grid {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#container {
+.container {
   display: flex;
   flex-wrap: wrap;
   width: 500px;
@@ -132,18 +132,18 @@ body {
   background-color: white;
 }
 
-#bottom {
+.bottom {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
 }
 
-#sizeSlider {
+.sizeSlider {
   width: 300px;
 }
 
-#sizeValue {
+.sizeValue {
   font-size: 20px;
   color: black;
 }
