--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     inset 0 0 20px rgba(0, 0, 0, 0.5),
     0 0 30px rgba(255, 255, 0, 0.7),
     0 0 50px rgba(255, 165, 0, 0.5);
-  outline: 2px solid yellow;
+  outline: 2px solid rgb(0, 0, 0);
 }
 
 .main-container.shake {
