--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   background: radial-gradient(circle, #2c2c2c, #1a1a1a);
-  background-image: url("https://transparenttextures.com/patterns/gplay.png");
+  background-image: url('https://www.transparenttextures.com/patterns/asfalt-dark.png');
 }
 
 /* Main Container */
